# cholesky-bench

./: CMakeLists.txt  README.md  cmake-format.patch  main.cpp  mkl_adapter.hpp  run.sh  tiled_cholesky.hpp
.github/workflows/: lint.yml
hpx/: CMakeLists.txt  compile.sh  compile_gprat.sh  execute.cpp  main.cpp
hpx/core/: CMakeLists.txt
hpx/core/include/: adapter_cblas_fp64.hpp  cholesky_factor.hpp  functions.hpp  tile_data.hpp  tile_generation.hpp  tile_generation_cov.hpp  tile_generation_old.hpp
hpx/core/src/: adapter_cblas_fp64.cpp  cholesky_factor.cpp  functions.cpp  tile_data.cpp  tile_generation.cpp
openmp/: CMakeLists.txt  CMakePresets.json  compile.sh  main.cpp  run.sh
openmp/core/: CMakeLists.txt
openmp/core/include/: adapter_cblas_fp64.hpp  cholesky_factor.hpp  functions.hpp  tile_generation.hpp  validate.hpp
openmp/core/src/: adapter_cblas_fp64.cpp  cholesky_factor.cpp  functions.cpp  tile_generation.cpp  validate.cpp
reference/: CMakeLists.txt  compile.sh  main.cpp  run.sh
reference/core/: CMakeLists.txt
reference/core/include/: adapter_cblas_fp64.hpp  adapter_plasma_fp64.hpp  cholesky_factor.hpp  functions.hpp  matrix_generation.hpp  plasma_factor.hpp  validate.hpp
reference/core/src/: adapter_cblas_fp64.cpp  adapter_plasma_fp64.cpp  cholesky_factor.cpp  functions.cpp  matrix_generation.cpp  plasma_factor.cpp  validate.cpp
